@@ -1,6 +1,17 @@
 sudo: false
 language: python
-python: 3.5
+
+matrix:
+   include:
+      - python: 3.3
+        env: TOXENV=py33
+      - python: 3.4
+        env: TOXENV=py34
+      - python: 3.5
+        env: TOXENV=py35
+      - python: 3.6
+        env: TOXENV=py36
+      - env: TOXENV=docs
 
 install:
    - pip install tox coveralls
