@@ -1,6 +1,6 @@
 [tox]
 envlist =
-  py33, py34, py35, docs
+  py33, py34, py35, py36, docs
 
 [testenv]
 deps =
